fix alignment

--- a/daily-animation/day1-cook-egg.css
+++ b/daily-animation/day1-cook-egg.css
@@ -124,3 +124,7 @@ footer {
     line-height: 100px;
     font-size: 28px;
 }
+
+.desc span{
+    font-size: 12px;
+}
